--- a/public/css/app.css
+++ b/public/css/app.css
@@ -11929,6 +11929,23 @@ body {
     color: var(--panna);
 }
 
+.custombtnBg2{
+    /* background-color: rgba(3, 117, 180); */
+    border-radius: 10px;
+    background-color: red;
+    color: var(--panna);
+    transition: all 0.5s;
+}
+
+.custombtnBg2:hover{
+    transform: scale(1.1);
+    /* background-color: rgba(3, 117, 180); */
+    background-color: red;
+    color: var(--panna);
+}
+
+
+
 .card-body{
     flex: none;
     padding: 0px;
@@ -12385,6 +12402,15 @@ nav.presto-nav, nav.presto-nav2 {
     width: 230px;
     /* transform: translateY(26px); */
 }
+/* 
+#imgMain{
+    box-shadow: 0px 0px 0px 3px var(--starry);
+    border-radius: 10px!important;
+} */
+/* 
+#imgThumbnail{
+    box-shadow: 0px 0px 0px 2px var(--starry);
+} */
 
 #cominciaAGuadagnareSection, #becomeRevisorDiv{
     width: 90%!important;
@@ -12510,13 +12536,9 @@ nav.presto-nav, nav.presto-nav2 {
     width: 100%;
 }
 
-.carousel-indicators{
-    margin-bottom: -30px;
-}
-
 #thumbnailsBtns{
     background-color: transparent;
-    border: none;
+    border: var(--papaya);
 }
 
 /* Work with us */
